src/objects/RMA_Item__c.object
<CustomObject>
    <fields>
        <fullName>OLI_Original_Product_Code__c</fullName>
        <label>Original Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLI_Original_Product_Name__c</fullName>
        <label>Original Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLI_Original_Quantity__c</fullName>
        <label>Original Quantity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLI_Original_Total_Price__c</fullName>
        <label>Original Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OLI_Original_Unit_Price__c</fullName>
        <label>Original Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItemId__c</fullName>
        <label>OpportunityLineItemId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Item_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this when the item is official returned.</inlineHelpText>
        <label>RMA Item Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>RMA Items</relationshipLabel>
        <relationshipName>RMA_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Value__c</fullName>
        <formula>Received_Quantity__c *  OLI_Original_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Received Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Return_Quantity__c</fullName>
        <label>Return Quantity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Value__c</fullName>
        <formula>Return_Quantity__c * OLI_Original_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>RMA Item</label>
    <nameField>
        <displayFormat>RMI{00000000}</displayFormat>
        <label>RMA Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Complete_Means_Returned_Eq_Received</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RMA_Item_Complete__c , Return_Quantity__c !=  Received_Quantity__c  )</errorConditionFormula>
        <errorMessage>You cannot mark this RMA Item Complete if the return quantity and received quantity are different.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Received_Quantity_LTE_Planned_Return_Qty</fullName>
        <active>true</active>
        <errorConditionFormula>Received_Quantity__c &gt;  Return_Quantity__c</errorConditionFormula>
        <errorMessage>You cannot receive more than the RMA is authorized for.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Return_quantity_LTE_Original_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>Return_Quantity__c  &gt;  OLI_Original_Quantity__c</errorConditionFormula>
        <errorMessage>You cannot return more than you original purchased.</errorMessage>
    </validationRules>
</CustomObject>